force-app/main/default/objects/Activity/fields/Agent_ID__c.field-meta.xml
<CustomField>
    <fullName>Agent_ID__c</fullName>
    <description>Agent ID</description>
    <label>Agent ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>