force-app/main/default/objects/Activity/fields/AudioFile__c.field-meta.xml
<CustomField>
    <fullName>AudioFile__c</fullName>
    <label>AudioFile</label>
    <length>255</length>
    <type>Text</type>
</CustomField>