force-app/main/default/objects/Activity/fields/Call_Duration_Tech__c.field-meta.xml
<CustomField>
    <fullName>Call_Duration_Tech__c</fullName>
    <description>Shows Call Duration</description>
    <inlineHelpText>Call Duration</inlineHelpText>
    <label>Call Duration</label>
    <length>20</length>
    <type>Text</type>
</CustomField>