force-app/main/default/objects/Activity/fields/Call_ID__c.field-meta.xml
<CustomField>
    <fullName>Call_ID__c</fullName>
    <description>Call ID</description>
    <label>Call ID</label>
    <length>9</length>
    <type>Text</type>
</CustomField>