force-app/main/default/objects/Activity/fields/Call_Source_Tech__c.field-meta.xml
<CustomField>
    <fullName>Call_Source_Tech__c</fullName>
    <description>Call log Source Name</description>
    <inlineHelpText>Call log Source Name</inlineHelpText>
    <label>Call Source</label>
    <length>30</length>
    <type>Text</type>
</CustomField>