force-app/main/default/objects/Activity/fields/Call_uniqueId__c.field-meta.xml
<CustomField>
    <fullName>Call_uniqueId__c</fullName>
    <label>Call_uniqueId</label>
    <length>50</length>
    <type>Text</type>
</CustomField>