force-app/main/default/objects/Activity/fields/CallAnsweredTime__c.field-meta.xml
<CustomField>
    <fullName>CallAnsweredTime__c</fullName>
    <label>CallAnsweredTime</label>
    <length>80</length>
    <type>Text</type>
</CustomField>