force-app/main/default/objects/Activity/fields/Called__c.field-meta.xml
<CustomField>
    <fullName>Called__c</fullName>
    <description>Called Phone Number (DNIS)</description>
    <label>Called</label>
    <type>Phone</type>
</CustomField>