force-app/main/default/objects/Activity/fields/Caller__c.field-meta.xml
<CustomField>
    <fullName>Caller__c</fullName>
    <description>Caller&apos;s Phone Number (ANI)</description>
    <label>Caller</label>
    <type>Phone</type>
</CustomField>