force-app/main/default/objects/Activity/fields/CallWrapupTime__c.field-meta.xml
<CustomField>
    <fullName>CallWrapupTime__c</fullName>
    <label>CallWrapupTime</label>
    <length>30</length>
    <type>Text</type>
</CustomField>