force-app/main/default/objects/Activity/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <description>POM Campaign Name</description>
    <label>Campaign</label>
    <length>96</length>
    <type>Text</type>
</CustomField>