force-app/main/default/objects/Activity/fields/Destination_Number__c.field-meta.xml
<CustomField>
    <fullName>Destination_Number__c</fullName>
    <description>Call Destination Number</description>
    <inlineHelpText>Call Destination Number</inlineHelpText>
    <label>Destination Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>