force-app/main/default/objects/Activity/fields/FromEmailAddress__c.field-meta.xml
<CustomField>
    <fullName>FromEmailAddress__c</fullName>
    <label>From Email Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>