force-app/main/default/objects/Activity/fields/holdTimeInSeconds__c.field-meta.xml
<CustomField>
    <fullName>holdTimeInSeconds__c</fullName>
    <label>holdTimeInSeconds</label>
    <length>50</length>
    <type>Text</type>
</CustomField>