force-app/main/default/objects/Activity/fields/icrt__AeGuide_Name__c.field-meta.xml
<CustomField>
    <fullName>icrt__AeGuide_Name__c</fullName>
    <description>Used to identify the Sales Guide matching the task</description>
    <label>Guide Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>