force-app/main/default/objects/Activity/fields/mbird__Conversation__c.field-meta.xml
<CustomField>
    <fullName>mbird__Conversation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Conversation</label>
    <referenceTo>mbird__Conversation__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>