force-app/main/default/objects/Activity/fields/NotifyServiceAgent__c.field-meta.xml
<CustomField>
    <fullName>NotifyServiceAgent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Notify Service Agent</label>
    <type>Checkbox</type>
</CustomField>