force-app/main/default/objects/Activity/fields/Old_Call_ID__c.field-meta.xml
<CustomField>
    <fullName>Old_Call_ID__c</fullName>
    <description>Old Call ID</description>
    <label>Old Call ID</label>
    <length>9</length>
    <type>Text</type>
</CustomField>