force-app/main/default/objects/Activity/fields/Original_Call_Object_ID__c.field-meta.xml
<CustomField>
    <fullName>Original_Call_Object_ID__c</fullName>
    <description>Original Call Object ID</description>
    <label>Original Call Object ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>