force-app/main/default/objects/Activity/fields/Queue__c.field-meta.xml
<CustomField>
    <fullName>Queue__c</fullName>
    <description>ACD Queue</description>
    <label>Queue</label>
    <length>20</length>
    <type>Text</type>
</CustomField>