force-app/main/default/objects/Activity/fields/Record_Link__c.field-meta.xml
<CustomField>
    <fullName>Record_Link__c</fullName>
    <description>Call Record Link</description>
    <inlineHelpText>Call Record Link</inlineHelpText>
    <label>Record Link</label>
    <type>TextArea</type>
</CustomField>