force-app/main/default/objects/Activity/fields/Source_Number_Tech__c.field-meta.xml
<CustomField>
    <fullName>Source_Number_Tech__c</fullName>
    <description>Call Source Number</description>
    <inlineHelpText>Call Source Number</inlineHelpText>
    <label>Source Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>