force-app/main/default/objects/Activity/fields/WrapupTimeInSeconds__c.field-meta.xml
<CustomField>
    <fullName>WrapupTimeInSeconds__c</fullName>
    <label>WrapupTimeInSeconds</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>